@@ -1,3 +1,10 @@
+2007-02-07  Zack Weinberg  <zackw@panix.com>
+
+	* tests/two_parent_workspace_commands_that_fail
+	* tests/two_parent_workspace_pluck: New tests (expected to fail).
+	* testsuite.lua: Add them.
+	* cmd_merging.cc (merge_into_workspace): Standardize a diagnostic.
+
 2006-09-25  Zack Weinberg  <zackw@panix.com>
 
 	* work.cc (workspace::get_work_rev): Fold into sole caller,
@@ -214,7 +221,7 @@
 
 2007-01-29  Thomas Keller  <me@thomaskeller.biz>
 
-	* added some lua hooks to run a script after revs or certs have 
+	* added some lua hooks to run a script after revs or certs have
 	arrived via netsync for a particular branch
 
 2007-01-29  Matthew Gregan  <kinetik@orcon.net.nz>
